--- a/public/common.css
+++ b/public/common.css
@@ -13,9 +13,9 @@ body {
 	background-color: #fafafa;
 }
 
-body>* {
-	box-shadow: 0 0.25rem 0.25rem rgba(136, 136, 136, 0.2);
-}
+/* body>* {
+	box-shadow: 0 0.25rem 0.25rem rgba(141, 141, 141, 0.25);
+} */
 
 img {
 	width: 100%;
