--- a/public/common.css
+++ b/public/common.css
@@ -1,10 +1,13 @@
 :root {
 	--btn: #1da0fb;
+	--box-shadow1: 0 0.125rem 0.75rem 0 rgba(0,0,0,.1);
+	--box-shadow2:  0 0.125rem 0.25rem rgba(0, 0, 0, .12), 0 0 0.375rem rgba(0, 0, 0, .04);
 }
 
 * {
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
 }
 
 body {
@@ -20,4 +23,8 @@ body {
 img {
 	width: 100%;
 	height: 100%;
+}
+
+a {
+	text-decoration: none;
 }
