--- a/public/common.css
+++ b/public/common.css
@@ -4,17 +4,20 @@
 	--box-shadow2:  0 0.125rem 0.25rem rgba(0, 0, 0, .12), 0 0 0.375rem rgba(0, 0, 0, .04);
 }
 
-* {
+*, ::after, ::before {
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
 	width: 100%;
 	min-height: 100vh;
 	overflow: auto;
-	background-color: #fafafa;
+	background-color: #f8fbf9;
+	/* background: url(/img/bg-bule.a77fc646.gif) no-repeat; */
+	/* background-size: 100% 100%; */
 }
 
 img {
