--- a/public/common.css
+++ b/public/common.css
@@ -1,5 +1,5 @@
 :root {
-	--bg: #ffffffaa;
+	--bg: #ffffffcc;
 	--btn: #1da0fb;
 	--box-shadow1: 0 0.125rem 0.75rem 0 rgba(0,0,0,.1);
 	--box-shadow2:  0 0.125rem 0.25rem rgba(0, 0, 0, .12), 0 0 0.375rem rgba(0, 0, 0, .04);
@@ -30,3 +30,6 @@ li {
 	list-style: none;
 }
 
+.el-dropdown-menu {
+	z-index: 9999!important;
+}
